# ic_assignment

./: CMakeLists.txt  dummy.cpp  indices.yaml  main.cpp
agents/: CMakeLists.txt  README.md  run.sh  smart.cpp
agents/artifacts/grids/: 1.txt  2.txt  4.txt
agents/artifacts/smart/16167/: agent_intern_state  state_progression
agents/artifacts/smart/16215/: state_progression
agents/artifacts/smart/16286/: agent_intern_state
agents/artifacts/smart/16288/: agent_intern_state  state_progression
agents/artifacts/smart/16308/: state_progression
agents/artifacts/smart/16310/: agent_intern_state  state_progression
agents/artifacts/smart/16634/: agent_intern_state
agents/artifacts/smart/16636/: agent_intern_state  state_progression
agents/artifacts/smart/16660/: agent_intern_state  state_progression
agents/artifacts/smart/16663/: agent_intern_state
agents/artifacts/smart/16697/: state_progression
agents/artifacts/smart/16710/: state_progression
agents/artifacts/smart/16720/: agent_intern_state  state_progression
agents/artifacts/smart/16722/: state_progression
agents/src/agent/: agent.cpp  types.h
agents/src/agent/actuator/: actuator.h
agents/src/agent/actuator/concrete/: movement_actuator.h
agents/src/agent/concrete/: smart_agent.h
agents/src/agent/sensor/: sensor.h  sensor_manager.h
agents/src/agent/sensor/concrete/: dirt_sensor.h
agents/src/environment/: environment.h
agents/src/environment/concrete/metrics/: cleaned_metric.h  move_cleaned_metric.h
agents/src/floor_utils/: floor.h  point.h
agents/src/logging/: logger.h
artifacts/grids/: 3.txt
artifacts/smart/14203/: agent_intern_state
artifacts/smart/14205/: agent_intern_state
artifacts/smart/14230/: agent_intern_state
artifacts/smart/14616/: agent_intern_state  state_progression
artifacts/smart/14638/: agent_intern_state  state_progression
artifacts/smart/14659/: agent_intern_state  state_progression
artifacts/smart/14661/: agent_intern_state  state_progression
heuristics/4_peaks/: genectic_algorithm.py  logs.txt  main.py  utils.py
src/agent/: agent.cpp  agent.h
src/environment/: environment.h
(+48 files in other folders)
